instructions.Instructions.scala.error
Compilation error:
Instructions:9: error: reassignment to val
  n=0
   ^Instructions:11: error: not found: value n
  n=n+1
  ^Instructions:17: error: reassignment to val
  n=0
   ^Instructions:19: error: not found: value n
  n=n+1
  ^